# CM2005_OOP_MIDTERM

./: CMakeLists.txt
CM2005 OOP midterm/: CSVReader.cpp  CSVReader.hpp  CandleStick.cpp  CandleStick.hpp  WeatherDataEntry.cpp  WeatherDataEntry.hpp  WeatherLog.cpp  WeatherLog.hpp  WeatherMain.cpp  WeatherMain.hpp  graphIdea.txt  main.cpp  test  test.csv
